WIP
-----------------------------
* General
  - Config window can now be opened by double-clicking on tray icon.

* Fuel calculator
  - Lap time values are now carried over between spin boxes
    when exceeded min or max value range.
    It is now quicker and easier to adjust lap time by
    mouse clicking or scrolling.
  - "Reload" button now only updates valid lap time data
    to lap time spin boxes.

* Rest API Module
  - Read "steering wheel range" value from Rest API for used in Steering widget.
    This value is only used when "steering wheel range" value
    cannot be read from sharedmemory API.
  - Fixed a timeout error while game is loading.

2.13.0 (2024-06-08)
-----------------------------
* General
  - Now unloads all image resources on widget close to free up RAM.

* Rest API Module
  - Add "connection_retry" option, which sets
    number of attempts to retry connection.
    Value range in "0" to "10".
    Default is "3" retries.
  - Add "connection_retry_delay" option, which sets
    time delay in seconds to retry connection.
    Value range in "0" to "60".
    Default is "1" second.
  - Fixed a timeout error.

* [New]Elevation Widget
  - Add Elevation Widget that displays track elevation plot.
    Note: elevation plot data is recorded together with track map.
    At least one complete & valid lap is required to generate elevation plot,
  - Show elevation reading in either meters or feet,
    depends on distance unit setting.
  - Show elevation progress bar & line according player's current position.
  - Show reference lines and marks.
  - Fully customizable plot display size, margin,
    detail level, text position and alignment.
    See user guide "Elevation" section for details.

* Flag Widget
  - Add "traffic_low_speed_threshold" option,
    which sets low speed threshold for showing
    nearest incoming traffic indicator (time gap).
    Default is "8" m/s (roughly 28kph).
    Set to "0" to disable.